# farm-to-home

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  README.md  app.py  config.py  database.py  docker-compose.yml  gitignore  main.py  poetry_set_app_version.py  pyproject.toml  pytest.ini  recharge.py  requirements.txt  security.py  shopify.app.toml  shopify_auth.py  test_charges.py
config/: base.yaml  dev.yaml  prd.yaml  stg.yaml  tst.yaml  unittest.yaml
deploy/base/: deployment.yaml  service.yaml
docs/: MODEL_DOCUMENTATION.md
enums/: transaction_type.py
evaluation/: evaluate.py
explainability/: SHAP_observations.md  robustness_test.py  shap_analysis.py  threshold_tuning.py
model/: candidate_model_metadata.json  candidate_model_metrics.json  promotion_decision.json
model/registry/v20251230/: metadata.json  metrics.json  model.pkl
model/registry/v20251231/: metadata.json
models/: customer.py  redemption.py  reward.py  seed_transaction.py
repositories/: customer_repository.py  redemption_repository.py  reward_repository.py  transaction_repository.py
retraining/: compare_models.py  prepare_model.py  preprocess.py  retrain.py
routes/: seeds.py  subscription.py  webhooks.py
schemas/: award.py  customer.py  redeem.py  shopify_order.py
scripts/: seed_rewards.py
services/: add_extra.py  dashboard.py  db_test.py  email_service.py  get_extras.py  history.py  recharge_rewards.py  redemption.py  remove_extra.py  rewards.py  seed_rules.py  seeds.py  shopify_webhooks.py  update_extra.py  webhook_security.py
src/insight_engine/: app.py  config.py  logging.yaml  model.py
src/insight_engine/accesscontrol/: authorization.py  credentials.py  exceptions.py
src/insight_engine/api/: general.py
src/insight_engine/domain/: api_info.py  payment_fraud_features.py
src/insight_engine/endpoints/: general_endpoints.py  predict.py
src/insight_engine/util/: secrets.py  (+4 more)
src/my_service/: app.py  config.py  logging.yaml
templates/emails/: admin_reward.html  customer_reward.html
test/: conftest.py  run_all.py  test_config.py
test/accesscontrol/: test_credentials.py
test/domain/: __init__.py
test/endpoints/: test_general_endpoints.py
test/persistence/: test_http_transaction_handler.py
test/serialization/: test_serializable.py
test/testutil/: assertion.py  integration_test.py  loadtestdata.py  mock_kafka_producer.py  mock_kafka_schema_registry.py  mock_pg_connection.py  mock_pg_pool.py  mocking.py
utils/: logger.py
(+78 files in other folders)
